--- a/package.json
+++ b/package.json
@@ -2,21 +2,33 @@
     "name": "auction-project",
     "version": "1.0.0",
     "description": "My TypeScript implementation a second-price sealed-bid auction kata.",
-    "main": "dist/interface/runAuction.js",
+    "main": "dist/index.js",
     "scripts": {
-      "build": "tsc",
-      "start": "node dist/interface/runAuction.js",
-      "test": "jest",
-      "clean": "rm -rf dist"
+        "build": "tsc",
+        "start": "node dist/index.js",
+        "start-dev": "ts-node-dev src/index.ts",
+        "test": "jest",
+        "clean": "rm -rf dist"
     },
-    "keywords": ["auction", "typescript", "kata", "solid", "clean-code", "clean-architecture"],
+    "keywords": [
+        "auction",
+        "typescript",
+        "kata",
+        "solid",
+        "clean-code",
+        "clean-architecture"
+    ],
     "author": "Pavel FOUJEU",
     "license": "MIT",
     "devDependencies": {
-      "jest": "^29.0.0",
-      "@types/jest": "^29.0.0",
-      "ts-jest": "^29.0.0",
-      "typescript": "^5.0.0"
+        "@types/jest": "^29.0.0",
+        "jest": "^29.0.0",
+        "ts-jest": "^29.0.0",
+        "ts-node": "^10.9.2",
+        "ts-node-dev": "^1.1.8",
+        "typescript": "^5.5.4"
     },
-    "dependencies": {}
-  }
+    "dependencies": {
+        "chalk": "^4.1.2"
+    }
+}
