--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "start": "node dist/index.js",
         "start-dev": "ts-node-dev src/index.ts",
         "test": "jest",
+        "test:watch": "jest --watch",
         "clean": "rm -rf dist"
     },
     "keywords": [
