--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "dist/index.js",
     "scripts": {
         "build": "tsc",
-        "start": "node dist/index.js",
+        "start": "tsc && node dist/index.js",
         "start-dev": "ts-node-dev src/index.ts",
         "test": "jest",
         "test:watch": "jest --watch",
