--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
         "start-dev": "ts-node-dev src/index.ts",
         "test": "jest",
         "test:watch": "jest --watch",
-        "clean": "rm -rf dist"
+        "clean": "rm -rf dist",
+        "format": "prettier --write \"src/**/*.{ts}\"",
+        "format:check": "prettier --check \"src/**/*.{ts}\""
     },
     "keywords": [
         "auction",
@@ -23,7 +25,11 @@
     "license": "MIT",
     "devDependencies": {
         "@types/jest": "^29.0.0",
+        "@typescript-eslint/eslint-plugin": "^8.4.0",
+        "@typescript-eslint/parser": "^8.4.0",
+        "eslint": "^9.9.1",
         "jest": "^29.0.0",
+        "prettier": "^3.3.3",
         "ts-jest": "^29.0.0",
         "ts-node": "^10.9.2",
         "ts-node-dev": "^1.1.8",
